--- a/vsem_calibration_tests/code_validation.Rmd
+++ b/vsem_calibration_tests/code_validation.Rmd
@@ -921,6 +921,16 @@ emulator_pred_df <- get_emulator_comparison_pred_df(emulator_info_list, X_test =
 ```
 
 ```{r}
+emulator_metrics <- get_emulator_comparison_metrics(emulator_info_list = emulator_info_list, 
+                                                    X_test = test_data$inputs_scaled, 
+                                                    Y_test = test_data$outputs, 
+                                                    metrics = c("rmse", "srmse", "nlpd_pointwise", "mah"), 
+                                                    output_variables = computer_model_data$output_vars)
+
+print(emulator_metrics$metrics)
+```
+
+```{r}
 gp_heatmap_plts <- get_2d_gp_pred_heatmap_plots(emulator_pred_df, X_test, raster = TRUE)
 ```
 
