--- a/vsem_calibration_tests/code_validation.Rmd
+++ b/vsem_calibration_tests/code_validation.Rmd
@@ -935,9 +935,46 @@ gp_heatmap_plts <- get_2d_gp_pred_heatmap_plots(emulator_pred_df, X_test, raster
 ```
 
 
+# Testing functions that allow testing an emulator over multiple designs. 
+
+```{r}
+
+design_settings <- data.frame(N_design = c(20, 40), 
+                              design_method = c("LHS", "LHS"), 
+                              scale_inputs = TRUE, 
+                              normalize_response = TRUE)
+
+design_list <- get_design_list(design_settings, computer_model_data, theta_prior_params, reps = 4)
+
+```
+
+```{r}
+emulator_info_list_test <- fit_emulator_design_list(emulator_settings[1,], design_list)
+```
+
+```{r}
+N_test_points <- 100
+N_test_sets <- 5 
+
+transformation_method <- ifelse(any(emulator_settings == "LNP"), "LNP", NA_character_)
+validation_list <- get_design_list_test_data(N_test_points = N_test_points, 
+                                             N_test_sets = N_test_sets, 
+                                             design_method = "LHS", 
+                                             design_list = design_list, 
+                                             computer_model_data = computer_model_data, 
+                                             theta_prior_params = theta_prior_params, 
+                                             transformation_method = transformation_method)
+
+```
 
 
+```{r}
+emulator_metrics_test <- get_emulator_comparison_metrics(emulator_info_list = emulator_info_list_test, 
+                                                         X_test = test_data$inputs_scaled, 
+                                                         Y_test = test_data$outputs, 
+                                                         metrics = c("rmse", "srmse", "nlpd_pointwise"), 
+                                                         output_variables = computer_model_data$output_vars)
 
-
-
+print(emulator_metrics_test$metrics)
+```
 
