--- a/vsem_calibration_tests/code_validation.Rmd
+++ b/vsem_calibration_tests/code_validation.Rmd
@@ -14,7 +14,7 @@ library(mlegp)
 library(ggplot2)
 library(gridExtra)
 library(data.table)
-library(BayesianTools)
+# library(BayesianTools)
 
 source("mcmc_calibration_functions.r")
 source("gp_emulator_functions.r")
@@ -967,14 +967,26 @@ validation_list <- get_design_list_test_data(N_test_points = N_test_points,
 
 ```
 
-
 ```{r}
 emulator_metrics_test <- get_emulator_comparison_metrics(emulator_info_list = emulator_info_list_test, 
-                                                         X_test = test_data$inputs_scaled, 
-                                                         Y_test = test_data$outputs, 
+                                                         X_test = validation_list[[1]]$inputs, 
+                                                         Y_test = validation_list[[1]]$outputs, 
                                                          metrics = c("rmse", "srmse", "nlpd_pointwise"), 
-                                                         output_variables = computer_model_data$output_vars)
+                                                         scale_inputs = TRUE,
+                                                         output_variables = computer_model_data$output_vars, 
+                                                         include_nug = TRUE)
 
 print(emulator_metrics_test$metrics)
 ```
+
+```{r}
+emulator_metrics_test <- get_emulator_comparison_metrics_validation_list(emulator_info_list = emulator_info_list_test, 
+                                                                         validation_data_list = validation_list,
+                                                                         metrics = c("rmse", "srmse", "nlpd_pointwise"), 
+                                                                         output_variables = computer_model_data$output_vars, 
+                                                                         include_nug = TRUE)
+```
+
+
+
 
