--- a/vsem_calibration_tests/code_validation.Rmd
+++ b/vsem_calibration_tests/code_validation.Rmd
@@ -983,7 +983,7 @@ print(emulator_metrics_test$metrics)
 emulator_metrics_test <- get_emulator_comparison_metrics_validation_list(emulator_info_list = emulator_info_list_test, 
                                                                          X_test_list = lapply(validation_list, function(l) l$inputs),
                                                                          Y_test_list = lapply(validation_list, function(l) l$outputs),
-                                                                         metrics = c("rmse", "srmse", "nlpd_pointwise"), 
+                                                                         metrics = c("rmse", "srmse", "nlpd_pointwise", "crps"), 
                                                                          scale_inputs = TRUE, 
                                                                          output_variables = computer_model_data$output_vars, 
                                                                          include_nug = TRUE)
