Progress on 2d response surface plotting function.

--- a/vsem_calibration_tests/gp_emulator_error_metrics.Rmd
+++ b/vsem_calibration_tests/gp_emulator_error_metrics.Rmd
@@ -16,6 +16,7 @@ library(gridExtra)
 library(data.table)
 library(BayesianTools)
 
+source("numerical_experiment_functions.r")
 source("mcmc_calibration_functions.r")
 source("gp_emulator_functions.r")
 ```
