--- a/vsem_calibration_tests/emulator_metrics_illustration.Rmd
+++ b/vsem_calibration_tests/emulator_metrics_illustration.Rmd
@@ -48,8 +48,8 @@ for(output_var in computer_model_data$output_vars) {
 # Priors 
 theta_prior_params <- computer_model_data$ref_pars[computer_model_data$pars_cal_sel,]
 theta_prior_params[, "dist"] <- c("Uniform", "Uniform")
-theta_prior_params[,"param1"] <- theta_prior_params[,"lower"]
-theta_prior_params[,"param2"] <- theta_prior_params[,"upper"]
+theta_prior_params[,"param1"] <- c(1.3, 0.4) # theta_prior_params[,"lower"]
+theta_prior_params[,"param2"] <- c(1.7, 0.6)  # theta_prior_params[,"upper"]
 theta_prior_params <- theta_prior_params[, c("dist", "param1", "param2")]
 
 print(theta_prior_params)
@@ -118,7 +118,7 @@ colnames(samp_exact_theta) <- c("LAR", "KEXT")
 
 ### Prior Plot. 
 ```{r}
-plt <- get_2d_response_surface_plot(computer_model_data - computer_model_data, 
+plt <- get_2d_response_surface_plot(computer_model_data = computer_model_data, 
                                     theta_vals = theta_prior_design$inputs, 
                                     param_names = computer_model_data$pars_cal_names, 
                                     response_surface = "prior", 
@@ -136,7 +136,7 @@ plot(plt)
 
 ### SSR Plot. 
 ```{r}
-plts <- get_2d_response_surface_plot(computer_model_data - computer_model_data, 
+plts <- get_2d_response_surface_plot(computer_model_data = computer_model_data, 
                                      theta_vals = theta_prior_design$inputs, 
                                      param_names = computer_model_data$pars_cal_names, 
                                      response_surface = "SSR", 
@@ -150,6 +150,25 @@ plts <- get_2d_response_surface_plot(computer_model_data - computer_model_data,
 grid.arrange(arrangeGrob(grobs=plts, nrow=1))
 
 ```
+
+The below plot is the same, except now it is plotted over the input values sampled from the true posterior, rather than 
+a grid of input values selected based on the prior bounds. 
+```{r}
+plts <- get_2d_response_surface_plot(computer_model_data = computer_model_data, 
+                                     theta_vals = samp_exact_theta, 
+                                     param_names = computer_model_data$pars_cal_names, 
+                                     response_surface = "SSR", 
+                                     SSR_vals = NULL, 
+                                     raster = FALSE, 
+                                     point_coords = computer_model_data$theta_true, 
+                                     samples_kde = samp_exact_theta, 
+                                     scale_inputs = TRUE, 
+                                     input_bounds = theta_prior_design$input_bounds)
+
+grid.arrange(arrangeGrob(grobs=plts, nrow=1))
+
+```
+
 
 ### Likelihood Plot. 
 ```{r}
@@ -225,8 +244,8 @@ We consider three Latin hypercube designs, with 20, 30, and 40 design points, re
 design_reps <- 50
 
 # The three design specifications to be used. 
-design_settings <- data.frame(N_design = c(20, 30, 30), 
-                              design_method = c("LHS", "LHS", "sample_candidates"), 
+design_settings <- data.frame(N_design = c(20, 30, 40), 
+                              design_method = c("LHS", "LHS", "LHS"), 
                               scale_inputs = TRUE, 
                               normalize_response = TRUE)
                               
@@ -243,6 +262,11 @@ design_list <- get_design_list(design_settings = design_settings,
 ```{r}
 emulator_info_list<- fit_emulator_design_list(emulator_settings[1,], design_list)
 ```
+
+We consider sampling validation points based on the prior and posterior. Validation points are sampled so that they satisfy the bounds 
+for all of the designs that are being tested (i.e. no emulators will be extrapolating). Since we sampled one of the designs from the 
+posterior (which is highly concentrated) this will have the effect that the samples based on the prior below are actually much more 
+similar to the posterior samples. 
 
 ```{r}
 # Validation sets sampled from prior. 
@@ -272,34 +296,33 @@ validation_list_post <- get_design_list_test_data(N_test_points = N_test_points,
                                                   design_candidates = samp_exact_theta)
 ```
 
-```{r}
-emulator_metrics <- get_emulator_comparison_metrics_validation_list(emulator_info_list = emulator_info_list, 
-                                                                   X_test_list = lapply(validation_list, function(l) l$inputs),
-                                                                   Y_test_list = lapply(validation_list, function(l) l$outputs),
-                                                                   metrics = c("rmse", "srmse", "nlpd_pointwise", "crps"), 
-                                                                   scale_inputs = TRUE, 
-                                                                   output_variables = computer_model_data$output_vars, 
-                                                                   include_nug = TRUE)
-```
+
+# Emulator Metrics 
 
 ```{r}
-emulator_metrics_post <- get_emulator_comparison_metrics_validation_list(emulator_info_list = emulator_info_list, 
-                                                                         X_test_list = lapply(validation_list_post, function(l) as.matrix(l$inputs)),
-                                                                         Y_test_list = lapply(validation_list_post, function(l) as.matrix(l$outputs)),
+suppressWarnings(emulator_metrics_prior <- get_emulator_comparison_metrics_validation_list(emulator_info_list = emulator_info_list, 
+                                                                         X_test_list = lapply(validation_list, function(l) l$inputs),
+                                                                         Y_test_list = lapply(validation_list, function(l) l$outputs),
                                                                          metrics = c("rmse", "srmse", "nlpd_pointwise", "crps"), 
                                                                          scale_inputs = TRUE, 
                                                                          output_variables = computer_model_data$output_vars, 
-                                                                         include_nug = TRUE)
+                                                                         include_nug = TRUE))
 ```
 
-We consider sampling validation points based on the prior and posterior. Validation points are sampled so that they satisfy the bounds 
-for all of the designs that are being tested (i.e. no emulators will be extrapolating). Since we sampled one of the designs from the 
-posterior (which is highly concentrated) this will have the effect that the samples based on the prior below are actually much more 
-similar to the posterior samples. 
 
-### Validation points based on prior. 
 ```{r}
-plts <- plot_emulator_comparison_violin_plots(emulator_metrics, fill_col = "design",
+suppressWarnings(emulator_metrics_post <- get_emulator_comparison_metrics_validation_list(emulator_info_list = emulator_info_list, 
+                                                                         X_test_list = lapply(validation_list_post, function(l) l$inputs),
+                                                                         Y_test_list = lapply(validation_list_post, function(l) l$outputs),
+                                                                         metrics = c("rmse", "srmse", "nlpd_pointwise", "crps"), 
+                                                                         scale_inputs = TRUE, 
+                                                                         output_variables = computer_model_data$output_vars, 
+                                                                         include_nug = TRUE))
+```
+
+
+```{r}
+plts <- plot_emulator_comparison_violin_plots(emulator_metrics_prior, fill_col = "design",
                                               metrics = c("crps", "rmse", "nlpd_pointwise"), 
                                               output_variables = computer_model_data$output_vars, 
                                               include_points = FALSE, 
@@ -307,7 +330,7 @@ plts <- plot_emulator_comparison_violin_plots(emulator_metrics, fill_col = "desi
 grid.arrange(plts)
 ```
 
-### Validaton points sampled from posterior. 
+
 ```{r}
 plts <- plot_emulator_comparison_violin_plots(emulator_metrics_post, fill_col = "design",
                                               metrics = c("crps", "rmse", "nlpd_pointwise"), 
@@ -316,6 +339,19 @@ plts <- plot_emulator_comparison_violin_plots(emulator_metrics_post, fill_col = 
                                               nrow = 2)
 grid.arrange(plts)
 ```
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
