--- a/vsem_calibration_tests/Bayes_opt_tests.Rmd
+++ b/vsem_calibration_tests/Bayes_opt_tests.Rmd
@@ -120,7 +120,7 @@ print(emulator_settings)
 ```
 
 ```{r, echo = FALSE}
-random.seed(100)
+set.seed(100)
 
 # Initial space-filling design.
 design_info <- get_input_output_design(N_points = 20, 
@@ -225,15 +225,16 @@ plot(lpost_MC_mean_plt)
 # Monte Carlo approximation of predictive log posterior random field variance. 
 
 lpost_MC_var_plt <- get_2d_heatmap_plot(X = prior_grid_info$inputs, 
-                                        y = log(sqrt(apply(lpost_GP_samp_grid, 2, var))), 
+                                        y = sqrt(apply(lpost_GP_samp_grid, 2, var)), 
                                         param_names = computer_model_data$pars_cal_names, 
                                         samples_kde = samp_exact_theta, 
                                         samples_points = design_info$inputs,  
                                         raster = TRUE, 
                                         point_coords = computer_model_data$theta_true, 
-                                        main_title = "Log Posterior Predictive Log SD (Monte Carlo approximation)", 
+                                        main_title = "Log Posterior Predictive SD (MC approximation)", 
                                         bigger_is_better = TRUE, 
-                                        legend_label = "Log SD")
+                                        legend_label = "SD", 
+                                        log_scale = TRUE)
 plot(lpost_MC_var_plt)
 ```
 
@@ -248,12 +249,22 @@ lpost_design <- calc_lpost_theta_product_lik(theta_vals = design_info$inputs,
                                              na.rm = TRUE, 
                                              return_list = FALSE,
                                              theta_prior_params = theta_prior_params)
-lpost_min <- min(lpost_design)
+lpost_max <- max(lpost_design)
 
-# Approximate Expected Improvement acquision over grid of points. 
+# Approximate Expected Improvement acquisition over grid of points. 
 EI_MC_est <- acquisition_EI_MC(theta_vals = prior_grid_info$inputs,
                                emulator_info_list = emulator_info_list, 
-                               lpost_min = lpost_min, 
+                               lpost_max = lpost_max, 
+                               computer_model_data = computer_model_data, 
+                               theta_prior_params = theta_prior_params, 
+                               sig2_eps = diag(computer_model_data$Sig_eps), 
+                               gp_pred_list = gp_pred_grid, 
+                               N_MC_samples = 100)
+
+# Approximate Probability of Improvement acquisition over grid of points. 
+PI_MC_est <- acquisition_EI_MC(theta_vals = prior_grid_info$inputs,
+                               emulator_info_list = emulator_info_list, 
+                               lpost_max = lpost_max, 
                                computer_model_data = computer_model_data, 
                                theta_prior_params = theta_prior_params, 
                                sig2_eps = diag(computer_model_data$Sig_eps), 
@@ -275,7 +286,20 @@ EI_MC_plt <- get_2d_heatmap_plot(X = prior_grid_info$inputs,
                                  legend_label = "EI")
 plot(EI_MC_plt)
 ```
-
+```{r}
+# Monte Carlo approximation of Probability of Improvement acquisition over grid points.  
+PI_MC_plt <- get_2d_heatmap_plot(X = prior_grid_info$inputs, 
+                                 y = PI_MC_est, 
+                                 param_names = computer_model_data$pars_cal_names, 
+                                 samples_kde = samp_exact_theta, 
+                                 samples_points = design_info$inputs,  
+                                 raster = TRUE, 
+                                 point_coords = computer_model_data$theta_true, 
+                                 main_title = "Probability of Improvement (Monte Carlo approximation)", 
+                                 bigger_is_better = TRUE, 
+                                 legend_label = "PI")
+plot(PI_MC_plt)
+```
 
 
 
