--- a/vsem_calibration_tests/Bayes_opt_tests.Rmd
+++ b/vsem_calibration_tests/Bayes_opt_tests.Rmd
@@ -301,7 +301,24 @@ PI_MC_plt <- get_2d_heatmap_plot(X = prior_grid_info$inputs,
 plot(PI_MC_plt)
 ```
 
+```{r}
 
+Bayes_opt_settings <- list(acquisition_type = "EI_MC", opt_method = "grid", N_MC_samples = 1000)
+
+results <- bayes_opt_one_step(emulator_info_list = emulator_info_list,  
+                              Bayes_opt_settings = Bayes_opt_settings,
+                              design_input_curr = design_info$inputs, 
+                              design_objective_curr = lpost_design, 
+                              design_best_idx = which.max(lpost_design),
+                              computer_model_data = computer_model_data, 
+                              sig2_eps = diag(computer_model_data$Sig_eps), 
+                              theta_prior_params = theta_prior_params, 
+                              theta_grid_ref = prior_grid_info$inputs)
+
+```
+
+emulator_info_list, design_input_curr, design_output_curr, design_best_idx,  
+                               acquisition_type, opt_method, computer_model_data, sig2_eps, theta_prior_params, ...)
 
 # Plots to consider doing: 
 #     - Heatmap of error metrics to track where posterior approx is good/bad. 
@@ -309,6 +326,7 @@ plot(PI_MC_plt)
 #       which in practice are not known. 
 #     - Look into local approximate GPs and Deep GPs. 
 #     - Look into weighting to approx posterior to avoid the situation above. 
+#     - Try to develop a CRPS objective for BayesOpt? 
 
 
 
